// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<button
  class="hover:underline text-blue-400"
>
  Learn React
</button>
`;

exports[`renders without crashing 2`] = `
<button
  class="hover:underline text-green-400"
>
  Learn React
</button>
`;
